# df_typecheck

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .pylintrc.ini  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
config/: .yamllint  dev-init.sh
src/df_typecheck/: __init__.py  type_dict.py
tests/: __init__.py  test_typecheck_logger.py
