[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dependencies.pylint]
version = "*"
optional = true

[tool.poetry.extras]
lint = [ "pylint",]

[tool.pytest.ini_options]
pythonpath = ["src"]
