# Metadata etc not included until linting tools catch up
[project]
name = "df_typecheck"
version = "0.1.0"
description = "Typechecks for pandas dataframe columns using a single, central type dictionary"
readme = "README.md"
requires-python = ">=3.9"

# License Information
license = { file = "LICENSE" }

authors = [{ name = "Jake Antmann", email = "jakeantmann@gmail.com" }]
maintainers = [{ name = "Jake Antmann", email = "jakeantmann@gmail.com" }]
# Search tags
# TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

# TODO add your own free-text keywords
keywords = ["cookiecutter", "QA"]

dependencies = ["pandas==1.3.2", "numpy==1.21.2", "loguru==0.5.3"]

[project.optional-dependencies]
tests = [
    'coverage==6.3.2',
    'mypy==0.950',
    'mypy-extensions==0.4.3',
    'pytest==7.1.2',
    'pytest-cov==3.0.0',
]

# Borrowed from https://github.com/pawamoy/git-changelog/blob/master/pyproject.toml
[project.urls]
homepage = "https://github.com/jakeantmann/df_typecheck"
repository = "https://github.com//jakeantmann/df_typecheck"
releases = "https://github.com//jakeantmann/df_typecheck/releases"
# documentation = "https://df_typecheck.readthedocs.io/en/0.1.0"
# documentation = "https://jakeantmann.github.io/df_typecheck"
# changelog = "https://pawamoy.github.io/git-changelog/changelog" # See https://keepachangelog.com/en/1.0.0/ for info on this
issues = "https://github.com/jakeantmann/df_typecheck/issues"
discussions = "https://github.com/jakeantmann/df_typecheck/discussions"
# gitter = "https://gitter.im/df_typecheck/community"
# funding = "https://github.com/sponsors/jakeantmann"

[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
## package names should match these glob patterns (["*"] by default)
# include = ["my_package*"]
## exclude packages matching these glob patterns (empty by default)
exclude = ["df_typecheck.tests*"]
# to disable scanning PEP 420 namespaces (true by default)
namespaces = false

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[tool.pytest.ini_options]
pythonpath = ["src"]

# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html
[tool.flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = "wemake"
show-source = true
statistics = false
doctests = true
ignore = ["D107", "D202", "D203", "D401", "E203", "E402", "E501", "W503"]
max-line-length = 120
inline-quotes = "double"
exclude = [".tox", "build"]
strictness = "long"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120
skip = [".tox", "build"]
known_first_party = "tests"
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = false

[tool.coverage.report]
show_missing = true
precision = 2
skip_covered = true
skip_empty = true
sort = "Cover"
