[metadata]
name = df_typecheck
version = 0.0.1
description = Typechecks for pandas dataframe columns using a single, central type dictionary
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//jakeantmann/df_typecheck
download_url = https://github.com//jakeantmann/df_typecheck/releases
project_urls =
    Bug Tracker = https://github.com//jakeantmann/df_typecheck/issues
    Source Code = https://github.com//jakeantmann/df_typecheck

# Author information
author = Jake Antmann
author_email = jakeantmann@gmail.com
maintainer = Jake Antmann
maintainer_email = jakeantmann@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cookiecutter
    # TODO add your own free-text keywords

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    pandas
    numpy
    loguru

[options.packages.find]
where = src

# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = True
statistics = False
doctests = True

# Plugins:
max-complexity = 6
max-line-length = 80

# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long
docstring-style = numpy

# Self settings:
max-imports = 17

# Excluding some directories:
exclude =
  .git
  __pycache__
  .venv
  .eggs
  *.egg
  dist
  # These folders contain code badly written for reasons:
  # Project spefic, do not copy.
  tests/fixtures/**
  tests/**/snapshots/**

# Exclude some pydoctest checks globally:
ignore = D100, D104, D401, W504, RST303, RST304,
         # Don't check for imports - these are handled automatically
         I001, I002, I003, I004, I005, H301

per-file-ignores =
  # These function names are part of 3d party API:
  wemake_python_styleguide/visitors/ast/*.py: N802
  # These modules should contain a lot of classes:
  wemake_python_styleguide/violations/*.py: WPS202
  # Eval is a complex task:
  wemake_python_styleguide/logic/safe_eval.py: WPS232
  # This module should contain magic numbers:
  wemake_python_styleguide/options/defaults.py: WPS432
  # Checker has a lot of imports:
  wemake_python_styleguide/checker.py: WPS201
  # Allows mypy type hinting, `Ellipsis`` usage, multiple methods:
  wemake_python_styleguide/types.py: D102, WPS214, WPS220, WPS428
  # There are multiple fixtures, `assert`s, and subprocesses in tests:
  tests/test_visitors/test_ast/test_naming/conftest.py: WPS202
  tests/*.py: S101, S105, S404, S603, S607, WPS211, WPS226, WPS323
  # Docs can have the configuration they need:
  docs/conf.py: WPS407
  # Pytest fixtures
  tests/plugins/*.py: WPS442

[isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
# Is the same as 80 in flake8:
line_length = 80

# We need these lines for Github Action to work correctly,
# **please** do not copy it to your own configs:
default_section = THIRDPARTY
known_first_party = wemake_python_styleguide*
skip_glob =
  # These folders contain code badly written for reasons:
  tests/fixtures/**
  tests/**/snapshots/**