[metadata]
name = df_typecheck
version = 0.0.1
description = Typechecks for pandas dataframe columns using a single, central type dictionary
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//jakeantmann/df_typecheck
download_url = https://github.com//jakeantmann/df_typecheck/releases
project_urls =
    Bug Tracker = https://github.com//jakeantmann/df_typecheck/issues
    Source Code = https://github.com//jakeantmann/df_typecheck

# Author information
author = Jake Antmann
author_email = jakeantmann@gmail.com
maintainer = Jake Antmann
maintainer_email = jakeantmann@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cookiecutter
    # TODO add your own free-text keywords

[options]
package_dir = 
    = src
packages = find:
install_requires = 
    pandas
    numpy
    loguru

[options.packages.find]
where = src

# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = True
statistics = False
doctests = True

[isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 80