[metadata]
name = df_typecheck
version = 0.0.1
description = Typechecks for pandas dataframe columns using a single, central type dictionary
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//jakeantmann/df_typecheck
repository = https://github.com//jakeantmann/df_typecheck
releases = https://github.com//jakeantmann/df_typecheck/releases
# documentation = https://df_typecheck.readthedocs.io/en/0.1.0
# documentation = https://jakeantmann.github.io/df_typecheck
# changelog = https://pawamoy.github.io/git-changelog/changelog # See https://keepachangelog.com/en/1.0.0/ for info on this
issues = https://github.com/jakeantmann/df_typecheck/issues
discussions = https://github.com/jakeantmann/df_typecheck/discussions
# gitter = https://gitter.im/df_typecheck/community
# funding = https://github.com/sponsors/jakeantmann

# Author information
author = Jake Antmann
author_email = jakeantmann@gmail.com
maintainer = Jake Antmann
maintainer_email = jakeantmann@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    cookiecutter
    QA
    # TODO add your own free-text keywords

# [build-system]
# requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    numpy
    loguru

[options.packages.find]
where = src

[options.extras_require]
dev =
    gitlint
    pytest

# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = True
statistics = False
doctests = True
ignore = D107,D202,D203,D401,E203,E402,E501,W503
max-line-length = 120
inline-quotes = double
exclude = .tox,build
strictness = long

[isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120
skip = .tox,build
known_first_party = tests
force_grid_wrap = 0
combine_as_imports = True

[mypy]
ignore_missing_imports = True
follow_imports = normal
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = False

# [nitpick]
# style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
